--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tch-nedb-session",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "Expressjs file session store based on NeDB.",
 	"engines": {
 		"node": ">=8.0.0"
@@ -9,8 +9,16 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/tomaschyly/NeDBSession.git"
+	},
 	"author": "Tomas Chyly <chyly@tomas-chyly.com> (https://tomas-chyly.com/en/)",
 	"license": "MIT",
+	"homepage": "https://github.com/tomaschyly/NeDBSession",
+	"bugs":{
+		"url": "https://github.com/tomaschyly/NeDBSession/issues"
+	},
 	"dependencies": {
 		"nedb": "^1.8.0"
 	},
